[gd_scene load_steps=3 format=1]

[ext_resource path="res://root.gd" type="Script" id=1]
[ext_resource path="res://Resources/theme.tres" type="Theme" id=2]

[node name="root" type="Node"]

script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 0.0
margin/right = 1288.0
margin/bottom = 802.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 623.0
margin/top = 388.0
margin/right = -612.0
margin/bottom = -385.0
alignment = 0

[node name="ConnectDisconnect" type="Button" parent="Panel/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1235.0
margin/bottom = 65.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Maschine verbinden"
flat = false

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 69.0
margin/right = 1235.0
margin/bottom = 138.0
alignment = 0

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1029.0
margin/bottom = 69.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Senden" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1033.0
margin/top = 0.0
margin/right = 1235.0
margin/bottom = 69.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Senden"
flat = false

[node name="TextEdit" type="TextEdit" parent="Panel/VBoxContainer"]

rect/min_size = Vector2( 0, 500 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 142.0
margin/right = 1235.0
margin/bottom = 773.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[connection signal="pressed" from="Panel/VBoxContainer/ConnectDisconnect" to="." method="_on_ConnectDisconnect_pressed"]

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Senden" to="." method="_on_Senden_pressed"]


